--- a/greeting-service/src/main/resources/application.properties
+++ b/greeting-service/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 spring.application.name=greeting-service
+
 greeting-service.greeting=Ola
 greeting-service.default-name=Mundo
 
+# Spring Boot Actuator - Show all endpoints & Show All details in Health
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.info.env.enabled=true
 
-spring.config.import=optional:configserver:http::/localhost:8888
+#Spring Cloud Config
+spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.username=admin
+#spring.cloud.config.password: secret_pass
 
-#spring.profiles.active=it
+#spring.profiles.active=en
