--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8888
 spring.application.name=config-service
 
+management.endpoints.web.exposure.include=*
+
+
 spring.cloud.config.server.git.uri=https://github.com/luciano-ferretto/202501_Microservices_Java.git
 spring.cloud.config.server.git.default-label=main
 spring.cloud.config.server.git.search-paths=configs/{application}
